adding docker
