# api-service/src/main/java/pe/ecclesia/cato/controller/OrderController.java
@@ -4,7 +4,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
-import pe.ecclesia.cato.api.dto.Order;
+import pe.ecclesia.cato.api.dto.OrderDto;
 import pe.ecclesia.cato.api.rest.OrdersApi;
 import pe.ecclesia.cato.service.OrderService;
 
@@ -16,14 +16,14 @@ public class OrderController implements OrdersApi {
     private final OrderService orderService;
 
     @Override
-    public ResponseEntity<List<Order>> getAllOrders() {
-        List<Order> orders = orderService.getAllOrders();
+    public ResponseEntity<List<OrderDto>> getAllOrders() {
+        List<OrderDto> orders = orderService.getAllOrders();
         return new ResponseEntity<>(orders, HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<Order> getOrderByCodeNumber(String codeNumber) {
-        Order order = orderService.getOrderByCodeNumber(codeNumber);
+    public ResponseEntity<OrderDto> getOrderByCodeNumber(String codeNumber) {
+        OrderDto order = orderService.getOrderByCodeNumber(codeNumber);
         return new ResponseEntity<>(order, HttpStatus.OK);
     }
 }
