# api-service/src/main/java/pe/ecclesia/cato/controller/ProductController.java
@@ -4,7 +4,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
-import pe.ecclesia.cato.api.dto.Product;
+import pe.ecclesia.cato.api.dto.ProductDto;
 import pe.ecclesia.cato.api.rest.ProductsApi;
 import pe.ecclesia.cato.service.ProductService;
 
@@ -14,8 +14,8 @@ import java.util.List;
 public class ProductController implements ProductsApi {
     private final ProductService productsService;
     @Override
-    public ResponseEntity<List<Product>> getAllProducts() {
-        List<Product> products = productsService.findAll();
+    public ResponseEntity<List<ProductDto>> getAllProducts() {
+        List<ProductDto> products = productsService.findAll();
         return new ResponseEntity<>(products, HttpStatus.OK);
     }
 }
